log/build_2024-05-01_15-46-21/PythonPackage/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/abolfazlmohammadpour/Temperature/ROS2WorkSpace/install/PythonPackage/lib/python3.10/site-packages/PythonPackage/PythonNodeSubscriber.py", line 8
    class TheNode(rclpy.node.Node)
                                  ^
SyntaxError: expected ':'

